--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -3,8 +3,22 @@
 :root {
   //* rgba is needed for the selected country hover state to blend in with the border-highlighting some browsers give the input on focus.
   --iti-hover-color: rgba(0, 0, 0, 0.05);
-  --iti-text-gray: #999;
-  --iti-border-gray: #ccc;
+  --iti-border-color: #ccc;
+
+  --iti-countryname-color: #555;
+  --iti-dialcode-color: #999;
+  --iti-input-color: #555;
+  --iti-search-color: #555;
+
+  --iti-input-placeholder-color: #bababa;
+  --iti-search-placeholder-color: var(--iti-input-placeholder-color);
+
+  --iti-input-placeholder-opacity: 1;
+  --iti-search-placeholder-opacity: var(--iti-input-placeholder-opacity);
+
+  --iti-input-bg: #fff;
+  --iti-search-bg: var(--iti-input-bg);
+  --iti-dropdown-bg: var(--iti-input-bg);
 
   --iti-spacer-horizontal: 8px;
   --iti-flag-height: 15px;
@@ -87,6 +101,20 @@
 
     //* Any margin-right here will push the selected-country away.
     margin-right: 0;
+
+    color: var(--iti-input-color);
+    background-color: var(--iti-input-bg);
+
+    //* ::placeholder and ::-ms-input-placeholder are seperate as the built css won't run when combined.
+    &::placeholder {
+      color: var(--iti-input-placeholder-color);
+      opacity: var(--iti-input-placeholder-opacity)
+    }
+
+    &::-ms-input-placeholder {
+      color: var(--iti-input-placeholder-color);
+      opacity: var(--iti-input-placeholder-opacity)
+    }
   }
 
   &__country-container {
@@ -166,21 +194,34 @@
       //* margin-left to compensate for the padding on the parent.
       margin-left: calc(var(--iti-border-width) * -1);
 
-      border: var(--iti-border-width) solid var(--iti-border-gray);
+      border: var(--iti-border-width) solid var(--iti-border-color);
       box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
     }
 
     border-radius: 3px;
-    background-color: white;
+    background-color: var(--iti-dropdown-bg);
   }
   &__search-input {
     width: 100%;
     border-width: 0;
     border-radius: 3px;
     padding: 9px 12px;
+    color: var(--iti-search-color);
+    background-color: var(--iti-search-bg);
+
+    //* ::placeholder and ::-ms-input-placeholder are seperate as the built css won't run when combined.
+    &::placeholder {
+      color: var(--iti-search-placeholder-color);
+      opacity: var(--iti-search-placeholder-opacity)
+    }
+
+    &::-ms-input-placeholder {
+      color: var(--iti-search-placeholder-color);
+      opacity: var(--iti-search-placeholder-opacity)
+    }
 
     & + .iti__country-list {
-      border-top: 1px solid var(--iti-border-gray);
+      border-top: 1px solid var(--iti-border-color);
     }
   }
   &__country-list {
@@ -227,7 +268,7 @@
 
   //* The dial codes after the country names are greyed out.
   &__dial-code {
-    color: var(--iti-text-gray);
+    color: var(--iti-dialcode-color);
   }
   &__country.iti__highlight {
     background-color: var(--iti-hover-color);
@@ -237,6 +278,7 @@
   &__flag-box,
   &__country-name {
     margin-right: var(--iti-spacer-horizontal);
+    color: var(--iti-countryname-color);
 
     [dir="rtl"] & {
       margin-right: 0;
