Improves search box border outline

--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -203,11 +203,11 @@
   }
   &__search-input {
     width: 100%;
-    border-width: 0;
-    border-radius: 3px;
     padding: 9px 12px;
     color: var(--iti-search-color);
     background-color: var(--iti-search-bg);
+    border: none;
+    border-bottom: var(--iti-border-width) solid var(--iti-border-color);
 
     //* ::placeholder and ::-ms-input-placeholder are seperate as the built css won't run when combined.
     &::placeholder {
