--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -15,14 +15,14 @@
   --iti-input-color: var(--iti-color);
   --iti-search-color: var(--iti-color);
 
-  --iti-placeholder-color: inherit;
+  --iti-placeholder-color: #a9a9a9;
   --iti-input-placeholder-color: var(--iti-placeholder-color);
   --iti-search-placeholder-color: var(--iti-placeholder-color);
 
   --iti-input-placeholder-opacity: 1;
   --iti-search-placeholder-opacity: var(--iti-input-placeholder-opacity);
 
-  --iti-input-bg: inherit;
+  --iti-input-bg: field;
   --iti-search-bg: var(--iti-input-bg);
   --iti-dropdown-bg: var(--iti-input-bg);
 
