feat: Update image paths to use .avif format for flags and flags@2x

--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -23,8 +23,8 @@
   --iti-selected-country-arrow-padding: calc(var(--iti-arrow-padding) + var(--iti-arrow-padding) + var(--iti-flag-width) + var(--iti-spacer-horizontal) + var(--iti-arrow-width) + var(--iti-input-padding));
 
   //* Image related variables.
-  --iti-path-flags-1x: url('../img/flags.png?1');
-  --iti-path-flags-2x: url('../img/flags@2x.png?1');
+  --iti-path-flags-1x: url('../img/flags.avif?1');
+  --iti-path-flags-2x: url('../img/flags@2x.avif?1');
   --iti-path-globe-1x: url('../img/globe.png');
   --iti-path-globe-2x: url('../img/globe@2x.png');
 
