Remove input styling vars as not our job

--- a/src/css/demo.scss
+++ b/src/css/demo.scss
@@ -53,3 +53,26 @@ input::placeholder {
 .notice {
   margin-top: 15px;
 }
+
+// dark mode
+@media (prefers-color-scheme: dark) {
+  // general site styling
+  body, input {
+    color: white;
+    background-color: #0d1117;
+  }
+  input {
+    border-color: #30363d;
+  }
+  input::placeholder {
+    color: #8d96a0;
+  }
+  // intl-tel-input styling
+  .iti {
+    --iti-border-color: #30363d;
+    --iti-dialcode-color: #999999;
+    --iti-dropdown-bg: #0d1117;
+    --iti-arrow-color: #aaaaaa;
+    --iti-hover-color: #30363d;
+  }
+}
