--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -1,30 +1,14 @@
 @import "metadata";
 
 :root {
-  //* rgba is needed for the selected country hover state to blend in with the border-highlighting some browsers give the input on focus.
-  --iti-hover-color: rgba(0, 0, 0, 0.05);
-
   --iti-border-gray: #ccc; //! DEPRECATED, will be removed in v24
-  --iti-border-color: var(--iti-border-gray);
-
   --iti-text-gray: #999; //! DEPRECATED, will be removed in v24
+
+  //* rgba is needed for the selected country hover state to blend in with the border-highlighting some browsers give the input on focus.
+  --iti-hover-color: rgba(0, 0, 0, 0.05); //* Used as the bg color for both the selected country and the dropdown items, on hover.
+  --iti-border-color: var(--iti-border-gray); //* Used for both the dropdown border, and the divider under the country search input.
   --iti-dialcode-color: var(--iti-text-gray);
-
-  --iti-color: inherit;
-  --iti-countryname-color: var(--iti-color);
-  --iti-input-color: var(--iti-color);
-  --iti-search-color: var(--iti-color);
-
-  --iti-placeholder-color: #a9a9a9;
-  --iti-input-placeholder-color: var(--iti-placeholder-color);
-  --iti-search-placeholder-color: var(--iti-placeholder-color);
-
-  --iti-input-placeholder-opacity: 1;
-  --iti-search-placeholder-opacity: var(--iti-input-placeholder-opacity);
-
-  --iti-input-bg: field;
-  --iti-search-bg: var(--iti-input-bg);
-  --iti-dropdown-bg: var(--iti-input-bg);
+  --iti-dropdown-bg: white;
 
   --iti-spacer-horizontal: 8px;
   --iti-flag-height: 15px;
@@ -107,14 +91,6 @@
 
     //* Any margin-right here will push the selected-country away.
     margin-right: 0;
-
-    color: var(--iti-input-color);
-    background-color: var(--iti-input-bg);
-
-    &::placeholder {
-      color: var(--iti-input-placeholder-color);
-      opacity: var(--iti-input-placeholder-opacity)
-    }
   }
 
   &__country-container {
@@ -203,17 +179,9 @@
   }
   &__search-input {
     width: 100%;
-    border-radius: 3px 3px 0 0; //* top-left | top-right | bottom-right | bottom-left
+    border-width: 0;
+    border-radius: 3px;
     padding: 9px 12px;
-    color: var(--iti-search-color);
-    background-color: var(--iti-search-bg);
-    border: none;
-    border-bottom: var(--iti-border-width) solid var(--iti-border-color);
-
-    &::placeholder {
-      color: var(--iti-search-placeholder-color);
-      opacity: var(--iti-search-placeholder-opacity)
-    }
 
     & + .iti__country-list {
       border-top: 1px solid var(--iti-border-color);
@@ -261,7 +229,7 @@
     outline: none;
   }
 
-  //* The dial codes after the country names are greyed out.
+  //* The grey dial codes, displayed after the country names in the dropdown.
   &__dial-code {
     color: var(--iti-dialcode-color);
   }
@@ -273,7 +241,6 @@
   &__flag-box,
   &__country-name {
     margin-right: var(--iti-spacer-horizontal);
-    color: var(--iti-countryname-color);
 
     [dir="rtl"] & {
       margin-right: 0;
@@ -435,19 +402,4 @@
 @media (min-resolution: 2x) {
   .iti__flag { background-image: var(--iti-path-flags-2x); }
   .iti__globe { background-image: var(--iti-path-globe-2x); }
-}
-
-@media (prefers-color-scheme: dark) {
-  .iti {
-    --iti-border-color: var(--iti-border-gray);
-    --iti-dialcode-color: var(--iti-text-gray);
-    --iti-input-placeholder-color: var(--iti-placeholder-color);
-    --iti-search-placeholder-color: var(--iti-placeholder-color);
-    --iti-search-placeholder-opacity: var(--iti-input-placeholder-opacity);
-    --iti-countryname-color: var(--iti-color);
-    --iti-input-color: var(--iti-color);
-    --iti-search-color: var(--iti-color);
-    --iti-search-bg: var(--iti-input-bg);
-    --iti-dropdown-bg: var(--iti-input-bg);
-  }
 }
