--- a/src/css/demo.scss
+++ b/src/css/demo.scss
@@ -62,17 +62,19 @@ input::placeholder {
     background-color: #0d1117;
   }
   input {
-    border-color: #30363d;
+    border-color: #5b5b5b;
   }
   input::placeholder {
     color: #8d96a0;
   }
   // intl-tel-input styling
   .iti {
-    --iti-border-color: #30363d;
+    --iti-border-color: #5b5b5b;
     --iti-dialcode-color: #999999;
     --iti-dropdown-bg: #0d1117;
     --iti-arrow-color: #aaaaaa;
     --iti-hover-color: #30363d;
+    --iti-path-globe-1x: url("../img/globe_light.png");
+    --iti-path-globe-2x: url("../img/globe_light@2x.png");
   }
 }
