--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -19,6 +19,7 @@
   --iti-arrow-padding: 6px;
   --iti-arrow-color: #555;
 
+  //* We have to control the horizontal padding, to make space for the selected country on the left/right.
   --iti-input-padding: 6px;
   --iti-right-hand-selected-country-padding: calc(var(--iti-spacer-horizontal) + var(--iti-spacer-horizontal) + var(--iti-flag-width));
   --iti-selected-country-arrow-padding: calc(var(--iti-arrow-padding) + var(--iti-arrow-padding) + var(--iti-flag-width) + var(--iti-spacer-horizontal) + var(--iti-arrow-width) + var(--iti-input-padding));
